<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>hamr_camera_preprocess</name>
  <version>0.0.0</version>
  <description>Camera preprocessing and LiDAR fusion nodes for HAMR</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Message package dependency -->
  <exec_depend>hamr_camera_preprocess_msgs</exec_depend>

  <!-- Optional runtime dependencies -->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
